# automacao-plugins

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  a.xml  cli.py  install-syncpl-uv.sh  properties.json  pyproject.toml  requirements.txt  setup.py  teste.xml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  enhancement.md  feature.md  feature.yaml
resources/wsdl-files/: nfse04.wsdl
resources/xsd-files/: nfse-v-100.xsd
src/: README.md  __init__.py  __main__.py  _mapper.py  action.py  alimentacao.py  app.py  automation-action.py  automation_request.py  automation_response.py  cli.py  main.py  mapper.py  mapper_generator.py  rag_query.py  syncpl.py  update-properties.sh  xsd_parser.py
src/config/: logging_config.py
src/controller/: document_controller.py
src/core/: __init__.py  element_builder.py  element_mapper.py
src/core/action/: __init__.py  action_builder.py  conditition_builder.py  content_builder.py  details_builder.py  parameters_builder.py  request_builder.py  response_builder.py  status_builder.py  template_builder.py
src/core/action/enum/: __init__.py  file_type.py
src/core/action/request/: __init__.py  content_builder.py  request_builder.py  signatures_builder.py  template_builder.py
src/core/action/response/: __init__.py  conditition_builder.py  details_builder.py  parameters_builder.py  response_builder.py  status_builder.py
src/core/mapper/: __init__.py  attributes_builder.py  mapper_builder.py  properties_builder.py  value_builder.py  variable_builder.py
src/core/mapper/data/: __init__.py  properties_loader.py
src/core/mapper/enum/: __init__.py  source_type.py
src/core/mapper/value/: __init__.py  source_builder.py  value_builder.py
src/core/utils/: __init__.py  constants.py  xml_utils.py
src/database/: database.py
src/ingestion/: file_reader.py  pdf_reader.py
src/processing/: chunker.py  embedder.py
src/repository/: document_repository.py
src/service/: document_service.py
src/tests/: __init__.py
src/tests/resources/: action.xml  mapper.xml
src/tests/unittest/action/: test_action_builder.py  test_condition_builder.py  (+5 more)
src/tests/utils/: __init__.py  runner.py
src/utils/: logger.py
syncpl/src/: __init__.py  __main__.py  cli.py  mapper_generator.py  xsd_parser.py
syncpl/src/processing/: embedder.py
xsd-files/: nfse-v-100.xsd  nfse-v2-02.xsd
xsd-files/automacao/: tiposComplexos_v1.00.xsd
(+14 files in other folders)
