[project]
name = "automacao-plugins"
version = "0.0.1"
dependencies = [
    "typer",
    "rich",
    "pytest",
    "lxml",
    "pre-commit",
    "pymupdf>=1.26.1",
    "tiktoken>=0.9.0",
    "sentence-transformers>=4.1.0",
    "psycopg2-binary>=2.9.10",
    "dotenv>=0.9.9",
    "docling>=2.39.0",
    "flask>=3.1.1",
    "google-generativeai>=0.8.5",
    "pgvector>=0.4.1",
]

[tool.uv]
package = false
